fix(theme-base10): incorrectly increased intralinear gap for the lines containing anchors. See #165

--- a/profiles/static/static/resources/css/static.css
+++ b/profiles/static/static/resources/css/static.css
@@ -28,6 +28,7 @@ main > .content {
     color: var(--pb-footnote-color, var(--jinks-color-primary, #333333));
     text-decoration: none;
     padding: var(--pb-footnote-padding, 0 0 0 .25em);
+    line-height: 1;
 }
 
 .footnote .fn-number {
