--- a/profiles/theme-base10/resources/css/jinks-components.css
+++ b/profiles/theme-base10/resources/css/jinks-components.css
@@ -60,6 +60,10 @@ h4 {
     margin-bottom: 1rem;
 }
 
+:host(pb-view) [rel="footnote"] {
+    line-height: 1;
+}
+
 :host(pb-zoom) svg {
     width: 1rem;
     height: 1rem;
